--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility which can be used to manipulate text in your way "
+      content="TextUtils is a word counter and a character counter utility which can be used to manipulate text in your way.
+       you can copy manipulated text convert it from lowercase to uppercase and uppercase to lowercase "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/public/favicon-16x16.png" />
     <!--
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TextUtils - React</title>
+    <title>TextUtils - word counter | character counter | uppercase to lowercase | lowercase to uppercase</title>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
   <body>
